fixing background for dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
   }
 
   .dark {
-    --background: 0 0% 8%;
+    --background: 0 0% 4%;
     --foreground: 0 0% 95%;
 
     /*#1F1F1F*/
